--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "solo48h.shop",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
